# desktop-app

./: .gitignore  Makefile  README.md  package-lock.json  package.json
.github/workflows/: build.yml  main.yml
QPC-Application/: package-lock.json  package.json  tsconfig.json  vite.config.ts
QPC-Application/src/: App.tsx  chat.tsx  main.tsx
QPC-Application/src-tauri/: Cargo.toml  tauri.conf.json
QPC-Application/src-tauri/icons/: icon.icns
QPC-Application/src-tauri/src/: lib.rs
QPG-Application/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.js
QPG-Application/llamacpp-rust/: Cargo.toml
QPG-Application/llamacpp-rust-example/: README.md
QPG-Application/llamacpp-rust-example/src/: main.rs
QPG-Application/src/: App.css  App.tsx
QPG-Application/src-tauri/: Cargo.toml  README.md  tauri.conf.json
QPG-Application/src-tauri/capabilities/: default.json
QPG-Application/src-tauri/src/: encryption.rs  json_example.json  lib.rs  main.rs  models.rs
QPG-Application/src-tauri/src/commands/: generation.rs  mod.rs  startup.rs
QPG-Application/src-tauri/src/preferences/: mod.rs
QPG-Application/src-tauri/src/state/: mod.rs
QPG-Application/src/components/: Footer.css  Footer.tsx  Header.css  Header.tsx
