[package]
name = "qpg-application"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qpg_application_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
native = ["llama-cpp-2/native"]
vulkan = ["llama-cpp-2/vulkan"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ollama-rs = { version = "0.2.2", features = ["chat-history"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json"] }
url = "2.2.2"
llama-cpp-2 = { path = "../llama-cpp-rs/llama-cpp-2", version = "0.1.69" }
encoding_rs = "0.8.35"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { path = "../llama-cpp-rs/llama-cpp-2", version = "0.1.69", features = ["metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
llama-cpp-2 = { path = "../llama-cpp-rs/llama-cpp-2", version = "0.1.69", features = ["cuda"] }

[target.'cfg(target_os = "linux")'.dependencies]
llama-cpp-2 = { path = "../llama-cpp-rs/llama-cpp-2", version = "0.1.69" }
