[package]
name = "qpg-application"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qpg_application_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ollama-rs = { version = "0.2.2", features = ["chat-history"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json"] }
url = "2.2.2"
base64 = "0.22.1"
rand = "0.6.0"
uuid = { version = "1.15.1", features = ["v4"] }
orion = "0.17.9"
aes-gcm = "0.10.3"
strsim = "0.11.1"
tfidf = "0.3.0"
rust-stemmers = "1.2.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"


